# wedding-memory-gallery

./: LICENSE  README.md
.github/workflows/: rust.yml
backend/: .gitignore  Cargo.toml  sqlite.db
backend/.sqlx/: query-6434c4a65490972f6786213d48725186ad362ee38721d01674454c9ea2343f2e.json  query-a918c2682615160ad3915286a543d6998d0cf46a283518cbccc96411fec5019a.json
backend/app/: Cargo.toml
backend/app/src/: database.rs  dto.rs  errors.rs  main.rs  state.rs  thumbnail.rs
backend/app/src/routers/: images.rs  mod.rs  storage.rs  upload.rs
backend/entity/: Cargo.toml
backend/entity/src/: file.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250628_195556_add_thumbnails.rs
backend/migrations/: 20250603164944_base.sql
backend/src/: database.rs  errors.rs  main.rs  state.rs
backend/src/routers/: images.rs  mod.rs  upload.rs
frontend/: package-lock.json  package.json
frontend/src/: main.ts
frontend/src/components/: Upload.vue
frontend/src/views/: HomeView.vue
