[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["multipart"] }
axum-test = "17.3.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
rstest = "0.25.0"
serde_json = "1.0.140"
tempfile = "3.20.0"
tower = "0.5.2"
