[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }

anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["multipart"] }
image = "0.25.6"
mime_guess = "2.0.5"
thumbnails = "0.2.1"
tokio = { version = "1.45.0", features = [
  "fs",
  "io-util",
  "macros",
  "rt-multi-thread",
] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower-http = { version = "0.6.4", features = ["cors", "limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }

sea-orm.workspace = true
serde.workspace = true

[dev-dependencies]
axum-test = "17.3.0"
rstest = "0.25.0"
serde_json = "1.0.140"
tempfile = "3.20.0"
